.k8s/resources/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: details
    app.kubernetes.io/component: details
    app.kubernetes.io/instance: details
  name: details
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    deploymentconfig: details
  sessionAffinity: None
  type: ClusterIP
